# RobostackPIDR

./: .gitignore  pixi.toml  ros2_shm_only.xml
outputs/go2_ros_tracking_minimal/: planning_report.json  scene_graph_normalized.json  semantic_path.json
src/Pathfinding/pathfinding_octomap/: CMakeLists.txt  README.md  package.xml
src/Pathfinding/pathfinding_octomap/config/: octomap_server.yaml
src/Pathfinding/pathfinding_octomap/launch/: octomap_from_rgbd.launch.py
src/semantic_path_teleop/: package.xml  setup.cfg  setup.py
src/semantic_path_teleop/semantic_path_teleop/: semantic_path_teleop.py  spawn_path_markers.py
