<?xml version="1.0"?>
<package format="3">
  <name>semantic_path_teleop</name>
  <version>0.1.0</version>
  <description>Replay a semantic path JSON as velocity commands for Unitree Go2 teleoperation in Gazebo.</description>
  <maintainer email="gabin.cougnet-defaux@telecomnancy.eu">CougnetDefaux Gabin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
