<?xml version="1.0"?>
<package format="3">
  <name>pathfinding_octomap</name>
  <version>0.1.0</version>
  <description>OctoMap integration for GO2 RGBD point cloud in Pathfinding.</description>

  <maintainer email="gabin.cougnet-defaux@telecomnancy.eu">Gabin Cougnet-Defaux</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>octomap_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
